# tt-graph-cdfa-rust

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PAPER_REPRODUCTION.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: artifact-schema.md  paper-mapping.md
examples/: nested_split.pseudo  program1.c  program1.pseudo  program1.tt  program1_pragma.cpp
examples/paper_program1/: program1.cpp  program1_plain.cpp
examples/simple_demo/: program_simple.cpp  program_simple_optimized.cpp
fixtures/: tiny_after_insertion.json
scripts/: check-doc-links.js
src/: bench.rs  bench_corpus.rs  builder.rs  c_frontend.rs  clang_frontend.rs  cli_support.rs  diagnostics.rs  export.rs  figures.rs  format_helper.rs  interactive.rs  lib.rs  main.rs  pseudo.rs  toy.rs
tests/: cli.rs
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: graphView.css
vscode-extension/src/: analyzer.ts  extension.ts  graphView.ts  resultLookup.ts  schema.ts
vscode-extension/test/: run-tests.ts
