[package]
name = "tt-graph-cdfa-rust"
version = "0.1.0"
edition = "2024"
description = "TT-Graph based Concurrent Data Flow Anomaly (CDFA) detection library and CLI tool"
authors = ["Tian <color8892@gmail.com>"]
license = "MIT"
repository = "https://github.com/color8892/tt-graph-cdfa-rust"

[features]
default = ["clang"]
clang = ["dep:clang"]

[dependencies]
clang = { version = "2", optional = true, features = ["runtime"] }