[package]
name = "tt-graph-cdfa-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "TT-Graph based Concurrent Data Flow Anomaly (CDFA) detection library and CLI tool"
authors = ["Tian <color8892@gmail.com>"]
license = "MIT"
repository = "https://github.com/color8892/tt-graph-cdfa-rust"
homepage = "https://github.com/color8892/tt-graph-cdfa-rust"
documentation = "https://docs.rs/tt-graph-cdfa-rust"
readme = "README.md"
keywords = ["tt-graph", "cdfa", "dataflow", "concurrency", "analysis"]
categories = ["algorithms", "development-tools", "science"]
exclude = [
    ".github/",
    ".vscode/",
    "target/",
    "vscode-extension/node_modules/",
    "vscode-extension/out/",
    "*.pdf",
    "*.vsix",
]

[features]
default = ["clang"]
clang = ["dep:clang"]

[dependencies]
clang = { version = "2", optional = true, features = ["runtime"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
